--- a/best_roster.ipynb
+++ b/best_roster.ipynb
@@ -333,7 +333,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = dt[[_ for _ in dt.columns if 'min' not in _ and _ not in ['per','dws','ows','min','err','pred','wins','pts','fg%', 'fga','fgAtRim%', 'fgaAtRim', 'fgLowPost%', 'fgaLowPost', 'fgMidRange%',  'fgaMidRange', 'tp%', 'tpa', 'ft%', 'fta', 'orb', 'drb_r', 'ast', 'tov',  'stl', 'blk', 'pf']]]\n",
+    "X = dt[[_ for _ in dt.columns if 'min' not in _ and _ not in ['ovr','per','dws','ows','min','err','pred','wins','pts','fg%', 'fga','fgAtRim%', 'fgaAtRim', 'fgLowPost%', 'fgaLowPost', 'fgMidRange%',  'fgaMidRange', 'tp%', 'tpa', 'ft%', 'fta', 'orb', 'drb_r', 'ast', 'tov',  'stl', 'blk', 'pf']]]\n",
     "y = dt['pts']/50\n",
     "if False:\n",
     "    ss = preprocessing.PolynomialFeatures()\n",
@@ -344,7 +344,7 @@
     "    X2.index = X.index\n",
     "    X = X2\n",
     "else:\n",
-    "    #X = (X-X.mean())/X.std()\n",
+    "    X = (X-X.mean())/X.std()\n",
     "    X = sm.add_constant(X)\n",
     "\n",
     "\n",
@@ -474,6 +474,180 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def load_roster(filename):\n",
+    "    base = json.load(open(filename,'rb'))\n",
+    "\n",
+    "    \n",
+    "    for i in range(len(base['players'])):\n",
+    "        player = base['players'][i]\n",
+    "        if 'name' in player and player['name'] !='':\n",
+    "            sname = base['players'][i]['name'].split()\n",
+    "            base['players'][i]['firstName'] = sname[0]\n",
+    "            base['players'][i]['lastName'] = ' '.join(sname[1:])\n",
+    "            del base['players'][i]['name']\n",
+    "    players = base['players']\n",
+    "    print(base['version'])\n",
+    "    base['version'] = 33\n",
+    "\n",
+    "    return players,base"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "players,base = load_roster('auto_roster_2020.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rt = [_['ratings'][0] for _ in players]\n",
+    "name = [_['firstName'] + ' ' + _['lastName'] for _ in players]\n",
+    "for r,n in zip(rt,name):\n",
+    "    r['name'] = n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfAN = pd.DataFrame(rt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r =0.159 * (dfAN.hgt - 47.5) + \\\n",
+    "    0.0777 * (dfAN.stre - 50.2) + \\\n",
+    "    0.123 * (dfAN.spd - 50.8) + \\\n",
+    "    0.051 * (dfAN.jmp - 48.7) + \\\n",
+    "    0.0632 * (dfAN.endu - 39.9) + \\\n",
+    "    0.0126 * (dfAN.ins - 42.4) + \\\n",
+    "    0.0286 * (dfAN.dnk - 49.5) + \\\n",
+    "    0.0202 * (dfAN.ft - 47.0) + \\\n",
+    "    0.0726 * (dfAN.tp - 47.1) + \\\n",
+    "    0.133 * (dfAN.oiq - 46.8) + \\\n",
+    "    0.159 * (dfAN.diq - 46.7) + \\\n",
+    "    0.059 * (dfAN.drb - 54.8) + \\\n",
+    "    0.062 * (dfAN.pss - 51.3) + \\\n",
+    "    0.01 * (dfAN.fg - 47.0) + \\\n",
+    "    0.01 * (dfAN.reb - 51.4) +48.5;\n",
+    "dfAN['ovr'] = r"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfAN.sort_values('ovr',0,False).head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp = dfAN['hgt'] * coeff['hgt']\n",
+    "for k,v in coeff.items():\n",
+    "    if k == 'const':\n",
+    "        tmp += v\n",
+    "    elif k == 'hgt':\n",
+    "        continue\n",
+    "    else:\n",
+    "        tmp += dfAN[k]*v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfAN['new_ovr'] = tmp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf_oc = sm.OLS(dfAN.ovr,sm.add_constant(dfAN.new_ovr)).fit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfAN['new_ovr'] = clf_oc.predict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(4,4))\n",
+    "plt.scatter(dfAN.ovr,dfAN.new_ovr)\n",
+    "plt.grid(True)\n",
+    "plt.plot([35,70],[35,70],c='k')\n",
+    "plt.xlim(30,75)\n",
+    "plt.xlabel('current ovr')\n",
+    "plt.ylabel('team MOV ovr')\n",
+    "plt.title('ovr tests (alexnoob roster)\\n non-scaled ovr')\n",
+    "plt.ylim(30,75)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfAN['diff'] = dfAN['new_ovr'] - dfAN['ovr']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfAN.sort_values('diff').tail(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(dfAN['diff'],20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -482,6 +656,51 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df3 = dfAN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df4 = df3.set_index('name').join(dfAN.set_index('name'),rsuffix='_auto')#.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df4['diff'] = df4['ovr']-df4['ovr_auto']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df4.to_csv('testlol.csv')"
+   ]
   },
   {
    "cell_type": "code",
