--- a/correct_base.ipynb
+++ b/correct_base.ipynb
@@ -89,7 +89,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "old_ratings = pd.read_csv('big_stat.csv')"
+    "old_ratings = pd.read_csv('beta_stats.csv')"
    ]
   },
   {
