--- a/dm_team_rating.ipynb
+++ b/dm_team_rating.ipynb
@@ -249,6 +249,7 @@
     "\n",
     "plt.plot(np.array(res.params[1:]),label='OLS',c='k')\n",
     "\n",
+    "plt.title('potential-based regression')\n",
     "plt.legend()\n",
     "plt.gca().set_facecolor('w')\n",
     "#plt.gca().set_edgecolor('w')\n",
