--- a/regress_ratings.ipynb
+++ b/regress_ratings.ipynb
@@ -24,8 +24,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df = pd.read_csv('big_stat.csv')\n",
+    "dfc = df.columns\n",
+    "len(dfc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df = pd.read_csv('beta_stats.csv')#big_stat\n",
     "df = df[(df.G*df.MP > 256)]\n",
+    "print(len(df.columns))\n",
+    "df.columns = dfc\n",
     "df.shape\n",
     "#df = df.sample(10000)"
    ]
@@ -252,7 +265,7 @@
     "    #clf = neural_network.MLPRegressor((36,5,24,36),'tanh',solver='adam',max_iter=1000)\n",
     "    #clf = neural_network.MLPRegressor((),'identity',solver='lbfgs',alpha=5e2,tol=1e-9)\n",
     "    #clf = multioutput.MultiOutputRegressor(linear_model.SGDRegressor(penalty='l2',alpha=5e2,eta0=1e-6,tol=1e-12,max_iter=50,verbose=True))\n",
-    "    clf = multioutput.MultiOutputRegressor(linear_model.ElasticNetCV(cv=5))\n",
+    "    clf = multioutput.MultiOutputRegressor(linear_model.ElasticNetCV(cv=5,n_alphas=10))\n",
     "    #clf = multioutput.MultiOutputRegressor(linear_model.ElasticNet(alpha=5e-3,l1_ratio=0.5))\n",
     "\n",
     "    #clf = ensemble.ExtraTreesRegressor(8,criterion='mae',max_depth=3,verbose=1)\n",
@@ -757,7 +770,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#player_stats[2019][\"Stephen Curry\"]"
+    "player_stats[2020][\"Stephen Curry\"]"
    ]
   },
   {
@@ -1272,6 +1285,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "players"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "if False:\n",
     "    ri = 0\n",
     "    _ = plt.hist(yt[:,ri],100,normed=True,alpha=0.5,label='predicted')\n",
@@ -1518,7 +1540,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "max(alphas)"
+    "player_stats[2020]['Zion Williamson']"
    ]
   },
   {
