--- a/best_roster.ipynb
+++ b/best_roster.ipynb
@@ -681,7 +681,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df4 = df3.set_index('name').join(dfAN.set_index('name'),rsuffix='_auto')#.dropna()"
+    "df4 = df3.set_index('name').join(dfAN.set_index('name'),rsuffix='_auto',method='outer')#.dropna()"
    ]
   },
   {
@@ -690,7 +690,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df4['diff'] = df4['ovr']-df4['ovr_auto']"
+    "df4['AUTOdiff'] =df4['ovr_auto']- df4['ovr']"
    ]
   },
   {
