dm did not believe in linearity of expectations

--- a/best_roster.ipynb
+++ b/best_roster.ipynb
@@ -91,7 +91,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "plt.style.use('fivethirtyeight')\n",
+    "plt.scatter(df[df.wins>0].pts/82,df[df.wins>0].wins/82,s=8,alpha=0.1)\n",
+    "plt.plot([-20,20],[-20* 0.0221+0.5,20* 0.0221+0.5],c='k',label='2.21% per Pt')\n",
+    "plt.grid(True)\n",
+    "plt.title('BBGM 750 Seasons')\n",
+    "plt.xlabel('Avg MOV')\n",
+    "plt.ylabel('Win%')\n",
+    "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import statsmodels.api as sm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sm.OLS(df[df.wins>0].wins/82,df[df.wins>0].pts/82).fit().summary()"
    ]
   },
   {
