--- a/correct_base.ipynb
+++ b/correct_base.ipynb
@@ -65,6 +65,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#del base['players']\n",
+    "#del base['draftPicks']\n",
+    "with open('empty.json','wt') as fp:\n",
+    "    json.dump(base,fp, indent=4, sort_keys=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "players_discard = [_ for _ in players if  _['tid'] > -3 ]\n",
     "players = [_ for _ in players if _['tid'] in set([-1,-2,-4,-5])]\n"
    ]
