--- a/retire.ipynb
+++ b/retire.ipynb
@@ -25,7 +25,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.style.use('fivethirtyeight')"
+   ]
   },
   {
    "cell_type": "code",
@@ -39,7 +41,7 @@
     "FEAT = ['Age','WS']\n",
     "\n",
     "for YR in range(1980,2020):\n",
-    "    table = np.load('tables_{}.pkl'.format(YR))\n",
+    "    table = np.load('tables_{}.pkl'.format(YR),allow_pickle=True)\n",
     "    for team in table:\n",
     "        stats = table[team]['advanced'][FEAT]\n",
     "        for item in stats.itertuples():\n",
@@ -63,7 +65,7 @@
     "d = []\n",
     "for k in WS_REAL:\n",
     "    t = np.array(WS_REAL[k])\n",
-    "    tm = t[:,2]#*t[:,3]\n",
+    "    tm = t[:,1]#*t[:,3]\n",
     "    tm = tm.astype(np.float)\n",
     "    d.append(np.vstack([[k for _ in range(tm.shape[0])],tm,t[:,1]]).T)"
    ]
@@ -74,30 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dft = pd.DataFrame(np.vstack(d),columns=['name','mp','ast'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "LIM = 200\n",
-    "d2 = dft[(dft.ast.astype(np.float) == 0.0) & (dft.mp.astype(np.float) > LIM)]\n",
-    "\n",
-    "a,b = d2.shape[0],dft[(dft.mp.astype(np.float) > LIM)].shape[0]\n",
-    "print(100*a/b,a,b)\n",
-    "d2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "table = np.load('tables_{}.pkl'.format(2019))\n",
+    "table = np.load('tables_{}.pkl'.format(2019),allow_pickle=True)\n",
     "for team in table:\n",
     "    stats = table[team]['advanced']\n",
     "    for item in stats.itertuples():\n",
@@ -167,7 +146,7 @@
     "pX = X#fexp.fit_transform(X)#fexp.fit_transform(X)\n",
     "#pX[:,0] = pX[:,0]**2\n",
     "\n",
-    "clf = LogisticRegression(C=1e6,solver='liblinear',class_weight='balanced')\n",
+    "clf = LogisticRegression(C=1e6,solver='liblinear')#,class_weight='balanced')\n",
     "clf.fit(pX,y)\n",
     "clf.score(pX,y),(1-y.sum()/y.shape[0])"
    ]
@@ -187,7 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FEAT,1/clf.coef_,clf.intercept_"
+    "FEAT,clf.coef_,clf.intercept_"
    ]
   },
   {
@@ -205,11 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X2 = sm.add_constant(pX)\n",
-    "logit_mod = sm.Logit(y,pd.DataFrame(X2,columns=['1'] + FEAT ))#fexp.get_feature_names(FEAT)))\n",
-    "logit_res = logit_mod.fit(disp=0)\n",
-    "print(logit_res.summary())\n",
-    "np.mean((logit_res.predict() >0.5)== y.astype(np.bool))"
+    "FEAT"
    ]
   },
   {
@@ -217,7 +192,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X2 = sm.add_constant(pX)\n",
+    "df_tmp = pd.DataFrame(X2,columns=['1'] + FEAT )\n",
+    "df_tmp.columns = ['(Age-18)^2' if _ == 'Age' else _ for _ in df_tmp.columns]\n",
+    "logit_mod = sm.Logit(y,df_tmp)#fexp.get_feature_names(FEAT)))\n",
+    "\n",
+    "logit_res = logit_mod.fit(disp=0)\n",
+    "print()\n",
+    "np.mean((logit_res.predict() >0.5)== y.astype(np.bool))\n",
+    "logit_res.summary()"
+   ]
   },
   {
    "cell_type": "code",
@@ -227,9 +212,10 @@
    "source": [
     "xp = np.linspace(18,50)\n",
     "p = lambda x: 1.0/(1.0+np.exp(-x))\n",
+    "#p = lambda x: np.log(np.exp(x)+1)\n",
     "for WS in [-1,0,1,3,5,7]:\n",
     "    #plt.plot(xp,p(clf.intercept_ + clf.coef_[0,0]*xp),label='WS0')\n",
-    "    plt.plot(xp,p(clf.intercept_ + clf.coef_[0,0]*(xp-18)**2 + clf.coef_[0,1]*WS   ),label='WS {}'.format(WS))\n",
+    "    plt.plot(xp,p(logit_res.params[0] + logit_res.params[1]*(xp-18)**2 + logit_res.params[2]*WS   ),label='WS {}'.format(WS))\n",
     "plt.xlim(18,55)\n",
     "plt.legend()\n",
     "plt.xlabel('Age')\n",
@@ -237,7 +223,9 @@
     "plt.ylabel('Prob of Retiring')\n",
     "plt.title('NBA (Age-18)^2 + WS Model')\n",
     "plt.ylim(0,1)\n",
+    "plt.xlim(18,50)\n",
     "plt.tight_layout()\n",
+    "plt.grid(True)\n",
     "\n",
     "plt.savefig('retire.png',facecolor='w',edgecolor='w')"
    ]
@@ -248,8 +236,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf.coef_[0,1]/clf.coef_[0,-1]"
+    "xp = np.linspace(18,60)\n",
+    "p = lambda x: 1.0/(1.0+np.exp(-x))\n",
+    "#p = lambda x: np.log(np.exp(x)+1)\n",
+    "\n",
+    "for WS in [-1,0,1,3,5,7]:\n",
+    "    #plt.plot(xp,p(clf.intercept_ + clf.coef_[0,0]*xp),label='WS0')\n",
+    "    plt.plot(xp,100*p(clf.intercept_ + clf.coef_[0,0]*(xp-18)**2 + clf.coef_[0,1]*WS   ),label='WS {}'.format(WS))\n",
+    "plt.xlim(18,55)\n",
+    "plt.legend()\n",
+    "plt.xlabel('Age')\n",
+    "\n",
+    "plt.ylabel('Prob of Retiring')\n",
+    "plt.title('New BBGM Model')\n",
+    "plt.ylim(0,100)\n",
+    "plt.xlim(35,60)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.grid(True)\n",
+    "\n",
+    "plt.savefig('retire.png',facecolor='w',edgecolor='w')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -276,15 +290,16 @@
    "outputs": [],
    "source": [
     "from matplotlib.colors import LogNorm\n",
-    "dft = df2[df2.MP > 8]\n",
-    "_ = plt.hexbin(dft.Ovr,dft['PER'],gridsize=40,norm=LogNorm())\n",
+    "plt.style.use('fivethirtyeight')\n",
+    "dft = df2[df2.MP*df2.G > 300]\n",
+    "_ = plt.hexbin(dft.Ovr,dft['WS'],gridsize=40,norm=LogNorm())\n",
     "#plt.ylim(-5,40)\n",
     "#plt.xlim(30,85)\n",
     "plt.xlabel('Ovr')\n",
-    "plt.ylabel('PER')\n",
+    "plt.ylabel('WS')\n",
     "xp = np.linspace(30,90)\n",
     "#plt.plot(xp,(1/64)*np.maximum(xp-40,0)**2,c='r')\n",
-    "plt.title('bbgm ovr -> PER')\n",
+    "plt.title('bbgm ovr -> WS')\n",
     "plt.savefig('wsovr3.png',edgecolor='w',facecolor='w')"
    ]
   },
@@ -297,9 +312,9 @@
     "WS_FAKE = defaultdict(list)\n",
     "valid_final_season2 = {}\n",
     "\n",
-    "FEAT = ['Name','Age','WS','TS%','3PAr','Pot']\n",
+    "FEAT2 = ['Name','Age','WS','TS%','3PAr','Pot']\n",
     "\n",
-    "for item in df2[FEAT].itertuples():\n",
+    "for item in df2[FEAT2].itertuples():\n",
     "    try:\n",
     "        v = [0.0 if _=='' else _ for _ in item[2:]]\n",
     "        #hgt = table[team]['roster'].loc[item[0]]['Ht']\n",
@@ -317,15 +332,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "WS_FAKE['Doug Moten']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "X2 = []\n",
     "y2 = []\n",
     "for name in WS_FAKE:\n",
@@ -334,7 +340,9 @@
     "    X2 += stats\n",
     "    for i in range(yrs-1):\n",
     "        y2.append(0.0)\n",
-    "    y2.append(1.0)"
+    "    y2.append(1.0)\n",
+    "    if len(y2) != len(X2):\n",
+    "        print('omg',len(y2),len(X2),name)"
    ]
   },
   {
@@ -354,7 +362,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "clf2 = LogisticRegression(C=1e6,solver='liblinear',class_weight='balanced')\n",
+    "clf2 = LogisticRegression(C=1e6,solver='liblinear')#,class_weight='balanced')\n",
     "clf2.fit(X2,y2)\n",
     "clf2.score(X2,y2),(1-y2.sum()/y2.shape[0])"
    ]
@@ -374,8 +382,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FEAT,clf2.coef_,clf2.intercept_"
+    "FEAT2,clf2.coef_,clf2.intercept_"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -384,6 +399,7 @@
    "outputs": [],
    "source": [
     "X3 = sm.add_constant(X2)\n",
+    "X3 = pd.DataFrame(X3,columns=['1'] + FEAT2[1:])\n",
     "logit_mod = sm.Logit(y2,X3)\n",
     "logit_res = logit_mod.fit(disp=0)\n",
     "print(logit_res.summary())\n",
@@ -416,10 +432,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf3 = ElasticNet(alpha=0)\n",
-    "df3 = df2[df2.Age > 25]\n",
-    "clf3.fit(np.array(df3.Ovr).reshape((-1,1))**2,df3.WS)\n",
-    "clf3.score(np.array(df3.Ovr).reshape((-1,1)),df3.WS)"
+    "df2['OvrSm'] = (np.maximum(0,df2['Ovr']-37))**2"
    ]
   },
   {
@@ -428,7 +441,86 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf3.coef_,clf3.intercept_"
+    "df3 = df2[df2.Age > 22]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf_ws = sm.OLS(df3.WS,df3['OvrSm']).fit()\n",
+    "from scipy.stats import pearsonr\n",
+    "print(pearsonr(clf_ws.predict(),df3.WS)[0])\n",
+    "clf_ws.summary()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(df3.WS,clf_ws.predict(),alpha=0.5,s=8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf3 = ElasticNet(alpha=0,fit_intercept=False)\n",
+    "#df3 = df2[df2.Age > 22]\n",
+    "clf3.fit(np.array(df3.OvrSm).reshape((-1,1)),df3.WS)\n",
+    "clf3.score(np.array(df3.OvrSm).reshape((-1,1)),df3.WS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xp = np.linspace(18,60)\n",
+    "p = lambda x: 1.0/(1.0+np.exp(-x))\n",
+    "#p = lambda x: np.log(np.exp(x)+1)\n",
+    "\n",
+    "for OVR in [50,55,60,65]:\n",
+    "    #plt.plot(xp,p(clf.intercept_ + clf.coef_[0,0]*xp),label='WS0')\n",
+    "    plt.plot(xp,100*p(clf.intercept_ + clf.coef_[0,0]*(xp-18)**2 + clf.coef_[0,1]* clf3.coef_[0]*(OVR-37)**2   ),label='OVR {}'.format(OVR))\n",
+    "plt.xlim(18,55)\n",
+    "plt.legend()\n",
+    "plt.xlabel('Age')\n",
+    "\n",
+    "plt.ylabel('Prob of Retiring')\n",
+    "plt.title('New BBGM Retirement')\n",
+    "plt.ylim(0,100)\n",
+    "plt.xlim(35,60)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.grid(True)\n",
+    "\n",
+    "plt.savefig('retire3.png',facecolor='w',edgecolor='w')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf3.coef_,clf3.intercept_,clf3.coef_[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf3.coef_[0]*50+clf3.intercept_"
    ]
   },
   {
@@ -441,14 +533,14 @@
     "p = lambda x: 1.0/(1.0+np.exp(-x))\n",
     "for POT in [40,50,60,70]:\n",
     "    #plt.plot(xp,p(clf.intercept_ + clf.coef_[0,0]*xp),label='WS0')\n",
-    "    plt.plot(xp,p(-2.5 + xp**2 * 0.006 - 1* ((POT-40)/4) ),label='Pot {}'.format(POT))\n",
+    "    plt.plot(xp,p(clf.intercept_ + clf.coef_[0,0]*(xp-18)**2 + clf.coef_[0,1]* (clf3.coef_[0]*((POT-37)**2)) ),label='Pot {}'.format(POT))\n",
     "plt.xlim(20,55)\n",
     "plt.ylim(0,1)\n",
     "plt.legend()\n",
     "plt.xlabel('Age')\n",
     "\n",
     "plt.ylabel('P(Retire | Age, Pot)')\n",
-    "plt.title('Fake model')\n",
+    "plt.title('Overall model')\n",
     "\n",
     "plt.tight_layout()\n",
     "\n",
@@ -461,7 +553,78 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf.intercept_ ,clf.coef_[0,0],clf.coef_[0,1]"
+    "clf.intercept_ ,1/clf.coef_[0,0],clf.coef_[0,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2['retire'] = clf.intercept_ + clf.coef_[0,0]*(np.maximum(df2.Age,18)-18)**2  + clf.coef_[0,1]*np.maximum(df2.WS,clf3.coef_[0]*((np.maximum(37,df2.Pot)-37)**2))\n",
+    "\n",
+    "df2['retire'] = 1/(1+np.exp(-df2.retire))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1/clf3.coef_,clf3.intercept_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(df2.retire,20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "retired = df2[df2.retire >0.5][['WS','Age','Pot','retire']]\n",
+    "retired"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.style.use('fivethirtyeight')\n",
+    "plt.figure(figsize=(10,6))\n",
+    "for i,col in enumerate(retired.columns):\n",
+    "    plt.subplot(2,2,1+i)\n",
+    "    plt.hist(df2[df2.retire < 0.5][col],20,density=True,alpha=0.8,label='not retired')\n",
+    "    plt.hist(df2[df2.retire > 0.5][col],8,density=True,alpha=0.8,label='retired')\n",
+    "    plt.title('Retirement ' + col + '\\n (weight: Balanced)')\n",
+    "    if i == 0:\n",
+    "        plt.xlim(-6,10)\n",
+    "    plt.legend()\n",
+    "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hexbin(df2.Age,df2.retire,gridsize=17)\n",
+    "plt.xlabel('Age')\n",
+    "plt.ylabel('P(Retire)')\n",
+    "plt.title('Balanced')\n",
+    "plt.colorbar()"
    ]
   },
   {
@@ -508,6 +671,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -526,7 +696,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
