--- a/team_win_testing.ipynb
+++ b/team_win_testing.ipynb
@@ -21,8 +21,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "avg = pd.read_csv(\"BBGM_TeamMOV_all_seasons_Average_Stats.csv\")\n",
-    "game = pd.read_csv(\"BBGM_TeamMOV_all_seasons_Game_Stats.csv\")"
+    "avg = pd.read_csv(\"BBGM_League_91_all_seasons_Average_Stats.csv\")\n",
+    "game = pd.read_csv(\"BBGM_League_91_all_seasons_Game_Stats.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gs = []\n",
+    "for i in range(2065,2075):\n",
+    "    gs.append(pd.read_csv('BBGM_League_91_{}_season_Game_Stats.csv'.format(i)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "game = pd.concat([game] + gs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hm_crt2 = defaultdict(list)\n",
+    "for g in game.itertuples():\n",
+    "    hm_crt2[g[1]].append(g[5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hm_crt3 = {k:[v[0],v[-1]] for k,v in hm_crt2.items()}"
    ]
   },
   {
@@ -73,16 +113,23 @@
     "    if row[5] == row[6]:\n",
     "        continue\n",
     "    MP = row[11]\n",
-    "    rt = MP*np.array(row[92:])\n",
+    "    rt = MP *np.array(row[92:])\n",
     "    ms,os = [int(_) for _ in row[7].split('-')]\n",
     "\n",
     "    team_rating[key] += rt\n",
     "    team_minutes[key] += MP\n",
     "    team_score[key] = ms-os\n",
     "    \n",
-    "    real_gids[key[0]].add(key[1])\n",
-    "    \n",
-    "    "
+    "    real_gids[key[0]].add(key[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "game_rate[game_rate.gid ==230]"
    ]
   },
   {
@@ -166,7 +213,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sm.OLS(game_res[:,1],game_res[:,0]).fit().summary()"
+    "sm.OLS(game_res[:,1],sm.add_constant(game_res[:,0])).fit().summary()"
    ]
   },
   {
@@ -175,35 +222,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import gzip\n",
-    "import json\n",
-    "with gzip.GzipFile('BBGM_TeamMOV_2045_preseason.json.gz','r') as fp:\n",
-    "    data = json.loads(fp.read())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tid_to_abbrev = {t['tid']: t['abbrev'] for t in data['teams']}\n",
-    "tid_to_abbrev[-1] = 'AllStar'\n",
-    "tid_to_abbrev[-2] = 'AllStar'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hm_crt ={}\n",
-    "for game in data['games']:\n",
-    "    tids1 = (game['teams'][0]['tid'],game['teams'][1]['tid'])\n",
-    "    if tids1[0] < 0 or tids1[1] < 0:\n",
-    "        continue\n",
-    "    hm_crt[game['gid']] = [tid_to_abbrev[tid] for tid in tids1]"
+    "hm_crt = hm_crt3"
    ]
   },
   {
@@ -226,7 +245,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gt[20949]"
+    "#gt[20949]"
    ]
   },
   {
@@ -334,7 +353,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(diff_df).iloc[18476]"
+    "#pd.DataFrame(diff_df).iloc[18476]"
    ]
   },
   {
@@ -343,7 +362,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hm_crt[18476]"
+    "#hm_crt[18476]"
    ]
   },
   {
@@ -432,9 +451,11 @@
     "ans = []\n",
     "for gm,teams in hm_crt.items():\n",
     "    dm_re2.append([h-a for h,a in zip(sorted(gid_pids[gm][teams[0]],reverse=True),sorted(gid_pids[gm][teams[1]],reverse=True))])\n",
-    "    hmt = sum([0.4417 * np.exp(-0.1905 * i)*v for i,v in enumerate(sorted(gid_pids[gm][teams[0]],reverse=True)) if i < 10])\n",
-    "    awt = sum([0.4417 * np.exp(-0.1905 * i)*v for i,v in enumerate(sorted(gid_pids[gm][teams[1]],reverse=True)) if i < 10])\n",
-    "    dm_re.append(hmt-awt)\n",
+    "    t1 = sorted(gid_pids[gm][teams[0]],reverse=True)\n",
+    "    t2 = sorted(gid_pids[gm][teams[1]],reverse=True)\n",
+    "    hmt = sum([0.4417 * np.exp(-0.1905 * i)*v for i,v in enumerate(t1) if i < 10])\n",
+    "    awt = sum([0.4417 * np.exp(-0.1905 * i)*v for i,v in enumerate(t2) if i < 10])\n",
+    "    dm_re.append((hmt-awt,np.log(hmt)+np.log(awt)))#,np.log(hmt*awt)))\n",
     "    ans.append(team_score[(gm,teams[0])])"
    ]
   },
@@ -453,7 +474,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dmr_clf = sm.OLS(ans,sm.add_constant(dm_re2)).fit()\n",
+    "from scipy.stats import pearsonr\n",
+    "dmr_clf = sm.RLM(ans,sm.add_constant(dm_re)).fit()\n",
+    "print(pearsonr(dmr_clf.predict(),ans)[0]**2)\n",
     "dmr_clf.summary()"
    ]
   },
@@ -464,11 +487,17 @@
    "outputs": [],
    "source": [
     "plt.plot(dmr_clf.params[1:],label='best fit diffs')\n",
+    "ci = dmr_clf.conf_int()\n",
+    "plt.fill_between(np.arange(len(dmr_clf.params[1:])),ci[1:,0],ci[1:,1],alpha=0.25)\n",
+    "\n",
     "plt.plot([0.4417 * np.exp(-0.1905 * i) for i in range(10)],label='current formula')\n",
+    "\n",
+    "#plt.plot([1.0565 * 0.4417 * np.exp(-0.1905 * i) for i in range(10)],label='current formula x 1.05')\n",
+    "\n",
     "plt.xlabel('position')\n",
     "plt.ylabel('coeff')\n",
     "plt.title('Sorted Team OVR diff \\n for predicting team results')\n",
-    "plt.legend()"
+    "plt.legend()\n"
    ]
   },
   {
@@ -521,6 +550,7 @@
     "plt.title('r-sq: {:.3f}'.format(tc.rsquared))\n",
     "plt.xlim(-30,30)\n",
     "plt.ylim(-60,60)\n",
+    "tc2 = tc\n",
     "\n",
     "plt.subplot(1,2,2)\n",
     "plt.title('')\n",
@@ -548,7 +578,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tc.summary()"
+    "tc2.summary()"
    ]
   },
   {
@@ -568,6 +598,20 @@
    "source": [
     "tc.params[0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
