--- a/state.ipynb
+++ b/state.ipynb
@@ -183,10 +183,10 @@
     "    d['pop'] = round(row[6]/1e6,1)\n",
     "    d['region'] = row[3]\n",
     "    d['stadiumCapacity'] = row[9]\n",
-    "    d['cid'] = int(i < 25)\n",
+    "    d['cid'] = int(i >= 25)\n",
     "    d['tid'] = i\n",
     "    d['colors'] = color_u2[name]\n",
-    "    d['did'] = i\n",
+    "    d['did'] = i//9\n",
     "    data['teams'].append(d)"
    ]
   },
@@ -196,7 +196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "50 "
+    "49//9"
    ]
   },
   {
