--- a/state.ipynb
+++ b/state.ipynb
@@ -171,8 +171,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = {}\n",
-    "data['teams'] = []\n",
+    "for ab in "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "team_hax = {}\n",
     "\n",
     "for i,row in enumerate(df.sort_values('Established[C]').itertuples()):\n",
     "    name = row[1].replace('[E]','').replace('[F]','')\n",
@@ -184,10 +192,10 @@
     "    d['region'] = row[3]\n",
     "    d['stadiumCapacity'] = row[9]\n",
     "    d['cid'] = int(i >= 25)\n",
-    "    d['tid'] = i\n",
+    "    d['tid'] = row[0]\n",
     "    d['colors'] = color_u2[name]\n",
     "    d['did'] = i//9\n",
-    "    data['teams'].append(d)"
+    "    team_hax[row[0]] = d"
    ]
   },
   {
@@ -196,7 +204,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "49//9"
+    "data = {}\n",
+    "data['teams'] = [team_hax[i] for i in range(50)]"
    ]
   },
   {
