--- a/best_roster.ipynb
+++ b/best_roster.ipynb
@@ -525,7 +525,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "players,base = load_roster('auto_roster_2020.json')"
+    "players,base = load_roster('alexnoob.json')"
    ]
   },
   {
@@ -681,7 +681,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dfAN"
+   ]
   },
   {
    "cell_type": "code",
@@ -707,7 +709,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df4 = df3.set_index('name').join(dfAN.set_index('name'),rsuffix='_auto',method='outer')#.dropna()"
+    "df4 = df3.set_index('name').join(dfAN.set_index('name'),rsuffix='_auto',how='outer')#.dropna()"
    ]
   },
   {
@@ -726,6 +728,42 @@
    "outputs": [],
    "source": [
     "df4.to_csv('testlol.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfAN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df4.sort_values('AUTOdiff',0,False)"
    ]
   },
   {
