--- a/regress_CBB.ipynb
+++ b/regress_CBB.ipynb
@@ -23,8 +23,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('avg_stats.csv')#pd.read_csv('BBGM_League_7_all_seasons_Average_Stats.csv')\n",
-    "df.shape"
+    "df = pd.read_csv('big_stat2.csv')#pd.read_csv('BBGM_League_7_all_seasons_Average_Stats.csv')\n",
+    "df.shape\n",
+    "df.columns = ['pid', 'Name', 'Pos', 'DraftPick', 'Age', 'Salary', 'Team', 'Season',\n",
+    "       'G', 'GS', 'MP', 'FG', 'FGA', 'FG%', '3P', '3PA', '3P%', 'FT', 'FTA',\n",
+    "       'FT%', 'ORB', 'DRB', 'TRB', 'AST', 'TOV', 'STL', 'Blk', 'BA', 'PF',\n",
+    "       'PTS', 'AtRimFG', 'AtRimFGA', 'AtRimFGP', 'LowPostFG', 'LowPostFGA',\n",
+    "       'LowPostFGP', 'MidRangeFG', 'MidRangeFGA', 'MidRangeFGP', 'PER', 'ORtg',\n",
+    "       'DRtg', 'OWS', 'DWS', 'WS', 'WS/48', 'EWA', 'TS%', '3PAr', 'FTr',\n",
+    "       'ORB%', 'DRB%', 'TRB%', 'AST%', 'STL%', 'BLK%', 'TOV%', 'USG%', '+/-',\n",
+    "       'Ovr', 'Pot', 'Hgt', 'Str', 'Spd', 'Jmp', 'End', 'Ins', 'Dnk', 'FT.1',\n",
+    "       '2Pt', '3Pt', 'oIQ', 'dIQ', 'Drb', 'Pss', 'Reb']"
    ]
   },
   {
@@ -132,7 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fexp = preprocessing.PolynomialFeatures(degree=2,interaction_only=True)\n",
+    "fexp = preprocessing.PolynomialFeatures(degree=2,interaction_only=False)\n",
     "scalerX = preprocessing.RobustScaler()\n",
     "scalery = preprocessing.StandardScaler()\n",
     "prescale_X = scalerX.fit_transform(X)\n",
@@ -159,16 +168,6 @@
     "    yt = scalery.inverse_transform(clf.predict(prescale_X))\n",
     "    err = np.linalg.norm(yt-y)\n",
     "    ts.append((err,clf))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#np.array([est.alpha_ for est in clf.estimators_]).mean()\n",
-    "#0.007250734067011631-7e-3"
    ]
   },
   {
@@ -221,7 +220,7 @@
     "CURRENT_YEAR = 2019\n",
     "all_tables = {}\n",
     "for ty in tyear:\n",
-    "    all_tables[ty] = np.load('cbb_{}.pkl'.format(ty))\n",
+    "    all_tables[ty] = np.load('cbb_{}.pkl'.format(ty),allow_pickle=True)\n",
     "teams = all_tables[tyear[0]].keys()\n"
    ]
   },
@@ -1099,6 +1098,55 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1117,7 +1165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
