--- a/regress_WAR.ipynb
+++ b/regress_WAR.ipynb
@@ -69,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('beta_stats.csv')#big_stat\n",
+    "df = pd.read_csv('big_stat2.csv')#big_stat\n",
     "df = df[(df.G*df.MP > 82)]\n",
     "time_weight = (1/np.array(df['MP']))\n",
     "#df['DRE'] = (df['PTS'] + .2*df['TRB'] + 1.7*df['STL'] + .535*df['Blk'] + .5*df['AST'] - .9*df['FGA'] -.35*df['FTA'] - 1.4*df['TOV'])*time_weight*36\n",
@@ -173,7 +173,7 @@
    "source": [
     "WS_REAL = defaultdict(list)\n",
     "for YR in range(1980,2020):\n",
-    "    table = np.load('tables_{}.pkl'.format(YR))\n",
+    "    table = np.load('tables_{}.pkl'.format(YR),allow_pickle=True)\n",
     "    for team in table:\n",
     "        stats = table[team]['advanced'][['Age','WS/48']]\n",
     "        for item in stats.itertuples():\n",
@@ -253,6 +253,7 @@
     "nf = lambda x: (x-x.mean())/x.std()\n",
     "y = np.sqrt(df['PER'] * np.maximum(1e-3,df['WS/48']))#df['+/-'] * time_weight * 36#45\n",
     "y =  nf(df['WS/48'])\n",
+    "y = df['+/-'] * time_weight * 36\n",
     "y = np.nan_to_num(y)\n",
     "\n",
     "#y = df['+/-'] * time_weight * 36#45\n",
@@ -1025,7 +1026,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
