--- a/regress_ratings.ipynb
+++ b/regress_ratings.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('beta_stats.csv')#big_stat\n",
+    "df = pd.read_csv('big_stat2.csv')#big_stat\n",
     "df = df[(df.G*df.MP > 256)]\n",
     "print(len(df.columns))\n",
     "df.columns = dfc\n",
@@ -218,21 +218,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "alphas = [0.0027970399058284225,\n",
-    " 0.0010260119525042856,\n",
-    " 0.0018565681404553416,\n",
-    " 0.001546097199032342,\n",
-    " 0.00181707020547193,\n",
-    " 0.0010257355518965446,\n",
-    " 0.0010795222890711558,\n",
-    " 0.005913268870169993,\n",
-    " 0.0059244781808397125,\n",
-    " 0.006696280944494202,\n",
-    " 0.002864408658370878,\n",
-    " 0.001778346344053557,\n",
+    "alphas2 = [\n",
+    " 0.0012093412968659217\n",
+    " 0.0021644471822303744,\n",
+    " 0.002476479841448311,\n",
+    " 0.003984192886046182,\n",
     " 0.0033815611873227974,\n",
-    " 0.003758229571404169,\n",
-    " 0.0013587480128740615]"
+    " 0.0059244781808397125,\n",
+    " 0.006696280944494202]"
    ]
   },
   {
@@ -259,13 +252,75 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "alpha_max = (np.sqrt(np.sum(prescale_X ** 2, axis=1)).max() /\n",
+    "             (prescale_X.shape[0]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#alpha_max = 1.0\n",
+    "eps = 1e-6\n",
+    "n_alphas = 10\n",
+    "alphas = np.logspace(np.log10(alpha_max * eps), np.log10(alpha_max),\n",
+    "                       num=n_alphas)[::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train2, X_test2, y_train2, y_test2 = model_selection.train_test_split(prescale_X, prescale_y, test_size=0.15, random_state=48)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test2.shape[0],y_test2.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = multioutput.MultiOutputRegressor(linear_model.ElasticNetCV(cv=3,alphas=alphas2))\n",
+    "clf.fit(X_test2,y_test2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sorted([_.alpha_ for _ in clf.estimators_])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "trials = 1\n",
     "ts = []\n",
     "for i in range(trials):\n",
     "    #clf = neural_network.MLPRegressor((36,5,24,36),'tanh',solver='adam',max_iter=1000)\n",
     "    #clf = neural_network.MLPRegressor((),'identity',solver='lbfgs',alpha=5e2,tol=1e-9)\n",
     "    #clf = multioutput.MultiOutputRegressor(linear_model.SGDRegressor(penalty='l2',alpha=5e2,eta0=1e-6,tol=1e-12,max_iter=50,verbose=True))\n",
-    "    clf = multioutput.MultiOutputRegressor(linear_model.ElasticNetCV(cv=5,n_alphas=10))\n",
+    "    #clf = multioutput.MultiOutputRegressor(linear_model.ElasticNetCV(cv=5,alphas=))\n",
+    "    clf = multioutput.MultiOutputRegressor(linear_model.ElasticNet(alpha=0.01,max_iter=2500))\n",
+    "\n",
     "    #clf = multioutput.MultiOutputRegressor(linear_model.ElasticNet(alpha=5e-3,l1_ratio=0.5))\n",
     "\n",
     "    #clf = ensemble.ExtraTreesRegressor(8,criterion='mae',max_depth=3,verbose=1)\n",
@@ -276,6 +331,16 @@
     "    yt = scalery.inverse_transform(clf.predict(prescale_X))\n",
     "    err = np.linalg.norm(yt-y)\n",
     "    ts.append((err,clf))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "#pickle.dump(clf,open('model.pkl','wb'))"
    ]
   },
   {
@@ -1249,7 +1314,7 @@
     "elif GEN_YEAR == CURRENT_YEAR-1:\n",
     "    for player in playersOG:\n",
     "        if player['tid'] == -2:\n",
-    "            player['tid'] = -4\n",
+    "            player['tid'] = -2\n",
     "            players.append(player)\n",
     "        elif player['tid'] == -4:\n",
     "            player['tid'] = -5\n",
