--- a/state.ipynb
+++ b/state.ipynb
@@ -80,15 +80,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d = requests.get(flag_u['Pennsylvania']).content"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import io\n",
     "from colorthief import ColorThief\n",
     "import requests"
@@ -171,15 +162,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for ab in "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "team_hax = {}\n",
     "\n",
     "for i,row in enumerate(df.sort_values('Established[C]').itertuples()):\n",
@@ -195,6 +177,9 @@
     "    d['tid'] = row[0]\n",
     "    d['colors'] = color_u2[name]\n",
     "    d['did'] = i//9\n",
+    "    if d['cid'] == 1:\n",
+    "        d['did'] = (i-25)//9 + 3\n",
+    "    print(i,d['did'],d['cid'])\n",
     "    team_hax[row[0]] = d"
    ]
   },
@@ -233,6 +218,34 @@
    "outputs": [],
    "source": [
     "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['gameAttributes'] = [    \n",
+    "    {\n",
+    "      \"key\": \"minPayroll\",\n",
+    "      \"value\": 30000\n",
+    "    },\n",
+    "        {\n",
+    "      \"key\": \"numGamesPlayoffSeries\",\n",
+    "      \"value\": [\n",
+    "        7,\n",
+    "        7,\n",
+    "        7,\n",
+    "        7,\n",
+    "        7\n",
+    "      ]\n",
+    "    },\n",
+    "    {\n",
+    "      \"key\": \"numPlayoffByes\",\n",
+    "      \"value\": 8\n",
+    "    },\n",
+    "] "
    ]
   },
   {
