new death of bbgm

--- a/death_of_bbgm.ipynb
+++ b/death_of_bbgm.ipynb
@@ -66,7 +66,7 @@
     "random_years = list(range(2040,2140))\n",
     "random.shuffle(random_years)\n",
     "random_years = sorted([2043,2060,2085,2110,2035])\n",
-    "random_years"
+    "random_years = []"
    ]
   },
   {
@@ -76,7 +76,7 @@
    "outputs": [],
    "source": [
     "base = json.load(open('updated_roster.json'))\n",
-    "base['version'] = 33\n",
+    "#base['version'] = 33\n",
     "\n",
     "players = base['players']\n",
     "players = [_ for _ in players if _['tid'] >= -1]\n",
@@ -84,13 +84,13 @@
     "\n",
     "cntr = 1\n",
     "\n",
-    "for yr in range(2019,2150):\n",
+    "for yr in range(2020,2101):\n",
     "    if len(random_years) >0 and (yr- random_years[0]) >= 0:\n",
     "        if yr == random_years[0] +5:\n",
     "            del random_years[0]\n",
     "        continue\n",
     "    #print(yr)\n",
-    "    for i in range(70):\n",
+    "    for i in range(90):\n",
     "        new_player = {}\n",
     "        new_player['name'] = '{} Doomsday'.format(write_roman(cntr))#.format(int(yr,i)\n",
     "        cntr+=1\n",
@@ -105,6 +105,8 @@
     "        #rtg['endu'] = 100\n",
     "        new_player['ratings'] = [rtg]\n",
     "        players.append(new_player)\n",
+    "for p in players:\n",
+    "    del p['pos']\n",
     "base['players'] = players\n",
     "with open('death_of_bbgm.json','wt') as fp:\n",
     "    json.dump(base,fp, sort_keys=True)"
@@ -186,7 +188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
